# kumo-solutions-software-factory

./: IDENTITY.md  MEMORY.md  TOOLS.md  USER.md  WORKFLOW_AUTO.md  resume-extracted-2026-02-11.txt
configs/: knowledge_base.json  personal_crm_learning.json  skills_allowlist.json
data/: daily_briefing.md  project_markdown_compliance.history.json  project_markdown_compliance.json  project_markdown_compliance.md  project_markdown_compliance_history.json  project_markdown_compliance_history.md  project_markdown_compliance_history_7day.md  project_markdown_compliance_morning_snippet.md  skills_integrity_baseline.json  skills_security_report.json
docs/: ai-governance-controls-matrix-executive-one-page-2026-03-09.md  ai-governance-controls-matrix-portfolio-mapping-2026-03-09.md  (+119 more)
projects/secure-health-rag-reference/: .env.example  README.md  pyproject.toml
projects/secure-health-rag-reference/app/: main.py
projects/secure-health-rag-reference/app/api/: reports.py
projects/secure-health-rag-reference/app/models/: schemas.py
projects/secure-health-rag-reference/app/rag/: generate.py  preprocess.py  retrieve.py
projects/secure-health-rag-reference/app/security/: audit.py  claims.py  redact.py
projects/secure-health-rag-reference/app/storage/: structured_store.py  vector_store.py
projects/secure-health-rag-reference/docs/: changelog.md  decisions.md  roadmap.md  security-notes.md
projects/secure-health-rag-reference/tests/: test_cross_tenant_deny.py  test_output_schema.py  test_redaction_pipeline.py  test_retrieval_boundaries.py  test_scope_enforcement.py
(+157 files in other folders)
